<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_recipe_add_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:hint="Tytuł"
                android:inputType="text"
                android:maxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextTitle">

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="500"
                    android:focusedByDefault="true"
                    android:hint="Opis"
                    android:inputType="text|textMultiLine"
                    android:maxLength="500"
                    tools:layout_conversion_absoluteHeight="80dp"
                    tools:layout_conversion_absoluteWidth="431dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="101dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewAddRecipeIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Składniki:"
                android:textColor="#16B60A"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

            <TextView
                android:id="@+id/showRecipeIngredientsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tagi:"
                android:textColor="#16B60A"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredientRV" />

            <Button
                android:id="@+id/showRecipeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_ingredients_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAddRecipeIngredients" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showRecipeDescription"
                app:layout_constraintWidth_max="250dp" />

            <Button
                android:id="@+id/addTagButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dodaj tagi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showRecipeIngredientsTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/showRecipeIngredientRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addTagButton"
                app:layout_constraintWidth_max="200dp" />

            <TextView
                android:id="@+id/view_add_recipe_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zdjęcie:"
                android:textColor="#16B60A"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showRecipeIngredientRV" />

            <Button
                android:id="@+id/cameraPhotoButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:text="Zrób zdjęcie"
                app:layout_constraintEnd_toStartOf="@+id/galleryPhotoButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_add_recipe_ingredients" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/test_drawable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/galleryPhotoButton" />

            <Button
                android:id="@+id/galleryPhotoButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:text="Zdjęcie z galerii"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cameraPhotoButton"
                app:layout_constraintTop_toBottomOf="@+id/view_add_recipe_ingredients" />

            <!--    <Button-->
            <!--        android:id="@+id/button"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="Galeria" />-->

            <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
            <!--        android:id="@+id/floatingActionButton_open_camera"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:contentDescription="@string/open_camera_view_button"-->
            <!--        android:src="@android:drawable/ic_menu_camera"-->
            <!--        android:layout_marginBottom="10dp"-->
            <!--        app:layout_constraintBottom_toBottomOf="parent"-->
            <!--        app:layout_constraintEnd_toEndOf="parent"-->
            <!--        app:layout_constraintHorizontal_bias="0.5"-->
            <!--        app:layout_constraintStart_toStartOf="parent"-->
            <!--        app:layout_constraintTop_toBottomOf="@+id/imageView"-->
            <!--        app:maxImageSize="50dp" />-->




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>