<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_product_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusedByDefault="true"
        android:hint="Nazwa"
        android:inputType="text"
        android:maxLength="100"
        app:layout_constraintBottom_toTopOf="@+id/productBarcodeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />

    <EditText
        android:id="@+id/productBarcodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusedByDefault="true"
        android:hint="Kod kreskowy"
        android:inputType="text"
        android:maxLength="100"
        app:layout_constraintEnd_toStartOf="@+id/scanBarcodeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameEditText" />

    <Button
        android:id="@+id/scanBarcodeButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Skanuj"
        app:layout_constraintBottom_toTopOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productBarcodeEditText"
        app:layout_constraintTop_toBottomOf="@+id/productNameEditText" />

    <TextView
        android:id="@+id/imageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zdjęcie:"
        android:textColor="#16B60A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productBarcodeEditText" />

    <Button
        android:id="@+id/addImageCameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="Zrób zdjęcie"
        app:layout_constraintEnd_toStartOf="@+id/addImageGalleryButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHeader" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/test_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImageGalleryButton" />

    <Button
        android:id="@+id/addImageGalleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="Zdjęcie z galerii"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addImageCameraButton"
        app:layout_constraintTop_toBottomOf="@+id/imageHeader" />


</androidx.constraintlayout.widget.ConstraintLayout>